--- a/index.html
+++ b/index.html
@@ -4,18 +4,11 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
-
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
-
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
+  <title>North American Waterfowl</title>
 </head>
 
 <body>
-  <script src="js/scripts.js"></script>
+  <script type="text/javascript" src="processing.js"></script>
+  <canvas data-processing-sources="SamTeeter_a3.pde"></canvas>
 </body>
 </html>
