--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 
 <body>
-  <script type="text/javascript" src="processing.js"></script>
-  <canvas data-processing-sources="SamTeeter_a3.pde"></canvas>
+  <embed 
+id="pcoords"
+type="application/x-java-applet;version=1.6"
+width="999" height="999" 
+archive="application.linux64/SamTeeter_a3.jar"
+code="SamTeeter_a3.class"
+pluginspage="http://java.com/download/"
+/>
 </body>
 </html>
