--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <embed 
 id="pcoords"
 type="application/x-java-applet;version=1.6"
-width="999" height="999" 
-archive="application.linux64/SamTeeter_a3.jar"
+width="1000" height="800" 
+archive="application.linux64/lib/SamTeeter_a3.jar"
 code="SamTeeter_a3.class"
 pluginspage="http://java.com/download/"
 />
