--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 id="pcoords"
 type="application/x-java-applet;version=1.6"
 width="1000" height="800" 
-archive="application.linux64/lib/SamTeeter_a3.jar"
+archive="application.linux64/lib/SamTeeter_a3.jar,
+         application.linux64/lib/gluegen-rt.jar,
+         application.linux64/lib/gluegen-rt-natives-linux-amd64.jar,
+         application.linux64/lib/jogl-all.jar,
+         application.linux64/lib/jlogl-all-natives-linux-amd64.jar"
 code="SamTeeter_a3.class"
 pluginspage="http://java.com/download/"
 />
