--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 
 <body>
   <script type="text/javascript" src="processing.js"></script>
-+  <canvas data-processing-sources="SamTeeter_a3.pde"></canvas>
+  <canvas data-processing-sources="SamTeeter_a3.pde"></canvas>
 </body>
 </html>
